--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </div>
     <script src="/bundle.js"></script>
     <footer>
-        <div class="container center">Made by <i>Materialize</i></div>
+        <div class="container center">Made by <i>Materialize</i>. Desain by @ <a href='https://pasuh.com/' title='pasuh'>pasuh.com</a></div>
     </footer>
 </body>
 </html>
